# semantic-icp

./: CMakeLists.txt  LICENSE  README.md
exec/: CMakeLists.txt  bootstrap.h  csv.h  filter_range.h  kitti_eval.cc  kitti_metrics.h  make_semantic.cc  nyu_eval.cc  nyu_metrics.h  pcd_read.cc  pcd_write.cc  read_confusion_matrix.h  roc_eval.cc  roc_metrics.h  scenenet_eval.cc  scenenet_metrics.h  test_gradient.cc  test_icp.cc
semantic_icp/: CMakeLists.txt  em_icp.h  gicp.h  gicp_cost_function.h  gicp_cost_functor_autodiff.h  local_parameterization_se3.h  pcl_2_semantic.h  semantic_icp.h  semantic_point_cloud.h  semantic_viewer.h  sqloss.h
semantic_icp/impl/: em_icp.hpp  gicp.hpp  semantic_icp.hpp  semantic_point_cloud.hpp  semantic_viewer.hpp
